# LLMsForDataScience

./: LICENSE  README.md  jobs.py  pyproject.toml
arcade_nl2code/annotated_dataset/: generate_schema_augmented_prompts.py
arcade_nl2code/annotated_dataset/resources/: prompt_exemplar_templates.ipynb
arcade_nl2code/evaluation/: execution_evaluation_main.py
arcade_nl2code/evaluation/test_data/: eval.json  eval_report.html
notebooks/: analysis.ipynb  datasets.ipynb  experiments.ipynb  local.ipynb  metrics.ipynb  multistep.ipynb  prompting.ipynb  results.ipynb  setup.ipynb
src/: analysis.py  execution.py  experiments.py  explore.py  llm.py  multistep.py  prompt_templates.py  prompt_utils.py  prompts.py  utils.py
